--- a/styles/style.css
+++ b/styles/style.css
@@ -312,7 +312,7 @@ header .nav .icon img:hover {
   align-items: flex-start;
   gap: 30px;
   margin: 40px;
-  /* animation: slideIn 2s, fadeIn 4s; */
+  
 }
 .name {
   font-family: manga;
@@ -438,8 +438,8 @@ header .nav .icon img:hover {
     font-size: 20px;
   }
   .featured .banner {
-    width: 100%;
-    height: auto;
+    width:  100%;
+    height: 250px;
   }
   .featured h2 {
     font-size: 30px;
@@ -450,5 +450,18 @@ header .nav .icon img:hover {
   .welcome {
     font-size: 18px;
   }
-  
+ #cont {
+    flex-direction: column;
+    align-items: center;
+    
+  }
+  .poster {
+    width: 60%;
+    padding: 15px;
+  }
+  .map {
+    width: 100%;
+    height: 100px;
+
+  }
 }
